# Ai-Data-Analytics-API

./: .gitignore  API.md  Dockerfile  README.md  UserData.sh  entrypoint.sh  pyproject.toml  requirements.txt
Data_Analisys_API/: settings.py  urls.py
api/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
gunicorn/: gunicorn.service
nginx/: nginx.conf
scripts/: gunicorn.sh  nginx.sh  python_dependencies.sh  start_app.sh
