[tool.poetry]
name = "internassignment"
version = "0.1.0"
description = ""
authors = ["RajendraKumarVesapogu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
requests = "^2.32.3"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.4.0"
poetry = "^1.8.3"
clickhouse-connect = "^0.7.15"
pandas = "^2.2.2"
beautifulsoup4 = "^4.12.3"
cython = "^3.0.10"
pyspark = "^3.5.1"
openai = "^1.35.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
